# v8-bench

./: .gitmodules  CMakeLists.txt  Cargo.toml  args.gn  build-v8.sh  run-exp.sh
.cargo/: config.toml
cpp-old/binary/: add.wat  addmemory.wat
cpp-old/src/: main.cc
cpp-old/src/v8/: v8instance.cc  v8instance.hh
cpp-old/src/wasm2c/: add.c  add.h  addsw.c  w2cinstance.cc  w2cinstance.hh  wasm-rt-impl.h
data/: plot.py
data/add/: arca-lock.csv  arca-serial.csv  arca-shootdown.csv  arca.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  v8.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
data/add-mem/: Arca.csv  Rust function.csv  arca-lock.csv  arca-serial.csv  arca-shootdown.csv  arca.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  v8.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
data/add-no-mem/: Arca.csv  Rust function.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
data/add-vec/: Arca.csv  Rust function.csv  arca.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  v8.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
data/jpeg/: arca-lock.csv  arca-serial.csv  arca-shootdown.csv  arca.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  v8.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
data/matmul/: arca.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  v8.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
data/matmul128/: arca-lock.csv  arca-serial.csv  arca-shootdown.csv  arca.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  v8.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
data/matmul64/: arca-lock.csv  arca-serial.csv  arca-shootdown.csv  arca.csv  v8-context-per-call.csv  v8-isolate-per-call.csv  v8.csv  wasm2c-bounds-checked.csv  wasm2c-mmap.csv
jpeg-wasm/: Cargo.toml
jpeg-wasm/src/: main.rs
kbench/: Cargo.toml  build.rs
kbench/etc/: memmap.ld
kbench/src/: main.rs
src/: arca.rs  clone.rs  function.rs  lib.rs  main.cc  main.rs  v8.rs  wasm2c.rs
src/common/: runtime.hh
src/util/: CMakeLists.txt  eventfd.hh
src/v8/: v8env.cc  v8env.hh  v8instance.cc  v8instance.hh  v8runner.hh
src/wasm2c/: addhw.c  addhw.h  addsw.h  w2crunner.cc  w2crunner.hh  wasm-rt-impl.c  wasm-rt.h
src/wat/: add-mem.wat  add-vec.wat  matmul128.wat  matmul64.wat
ubench/: Cargo.toml  build.rs
wasm2c/: lib.c
wat/: add-mem.wat  add.wat
