[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
include_directory = "0.1.1"
libloading = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
v8 = "135.0.0"
wabt = "0.10.0"
