[workspace]
members = [ "jpeg-wasm","kbench", "ubench"]

[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[features]
debugcon = ["kbench/debugcon"]

[dependencies]
vmm = { path = "arca/vmm" }
common = { path = "arca/common" }
user = { path = "arca/user", artifact = "bin", target = "x86_64-unknown-none" }
kbench = { path = "kbench", artifact = "bin", target = "x86_64-unknown-none" }
ubench = { path = "ubench", artifact = "bin", target = "x86_64-unknown-none" }
jpeg-wasm = { path = "jpeg-wasm", artifact = "bin", target = "wasm32-unknown-unknown" }
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
humantime = "2.2.0"
include_directory = "0.1.1"
libloading = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
v8 = "135.0.0"
wabt = "0.10.0"
env_logger = "0.11.7"
log = "0.4.27"
ouroboros = "0.18.5"
